完善手机适配与正式版登录验收